# simple-walker

./: CMakeLists.txt  LICENSE  README.md  package.xml
branch_results/: cppcheck.txt  cpplint.txt
include/: distance_alerter.hpp  simple_walker.hpp
launch/: walker_sim.launch
src/: danger_node.cpp  distance_alerter.cpp  simple_walker.cpp  walker_node.cpp
worlds/: custom_map.world
